# thinking

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: pkg-build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/views/: HomeView.vue
